# pysource-minimize

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  pyrightconfig.json  pysource_minimize.py
.github/workflows/: ci.yml  create-release.yml
pysource_minimize/: __init__.py  _minimize.py  _minimize_base.py  _minimize_structure.py  _minimize_value.py  _utils.py
src/pysource_minimize/: __init__.py  __main__.py  _minimize.py  _minimize_base.py  _minimize_structure.py  _minimize_unique_name.py  _minimize_value.py  _utils.py
tests/: conftest.py  dump_tree.py  test_checker.py  test_cli.py  test_minimize_all.py  test_needle.py  test_remove_children.py  test_remove_childs.py  test_remove_one.py  test_template_string.py  test_values.py  utils.py
tests/node_name_samples/: 0e1f91af1b3a644e295741fafc63d68ab0db5889b95d88a7e79326997e620310_name_4.py  0ff812be1859047590e667ce971b574d9bdddd66c8f35635a8598775e06a7eec_name_0.py  18920e94957571fb8636eeab788282886f7d62007c7fa25bb0b2713bac36896c_name_0.py  200ca2a92ec9500470b78f425a083a5789174e71e2a8da4e5c9c3058aae1387b_name_3.py  afe35c3802106229be98522719c1f8c8aee741340384a0db48adb3f1d4fc0b10_name_1.py  b277b4637e2d7257d41ce9f123aaa9eb2f4dfd07c9db496a8a0b809eeac0df63_name_0.py  cb5ee765d78fa6306233ed4bea4e8749bf8650b9a26043d88e44ed67f0798fe1_name_0.py  de851a926e11a7948455809a3c8c1d43e911f36dc84c143901544c7684a38891_name_4.py  e2e484bac1ee0d8e886a8b1e8603b047944a7448d75d553b9ea20349a91a25c4_name_4.py  f5d82871929d46ed5028ad6fa8c327cc9abdfeaf579059205e3a44fa32a4370f_name_2.py
