[tool.poetry]
name = "pysource-minimize"
version = "0.5.0"
description = "minimize python source code"
authors = ["Frank Hoffmann"]
license = "MIT"
readme = "README.md"
packages = [{include = "pysource_minimize"}]

[tool.commitizen]
changelog_incremental = true
major_version_zero = true
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version_files = [
  "pysource_minimize/__init__.py:version"
]
version_provider = "poetry"

[tool.poetry.dependencies]
python = "^3.7"
asttokens = "^2.0.8"
rich = "^12.6.0"
astunparse = "^1.6.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-subtests = "^0.8.0"
pytest-xdist = {extras = ["psutil"], version = "^3.1.0"}
coverage-enable-subprocess = "^1.0"
coverage = "^6.5.0"
mypy = "^1.2.0"
pysource-codegen = "^0.4.1"

[tool.poetry.scripts]
pysource-minimize = "pysource_minimize.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["tests","pysource_minimize"]
parallel = true
branch = true
data_file = "$TOP/.coverage"

[tool.coverage.report]
exclude_lines = ["assert False", "raise NotImplemented"]

[tool.black]
force-exclude = "tests/.*_samples"
skip_magic_trailing_comma = true

[tool.mypy]
exclude="tests/.*_samples"
