[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Frank Hoffmann", email = "15r10nk@polarbit.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
"asttokens >=2.0.8",
"rich >=12.6.0",
"astunparse >=1.6.3",
"click >=8.1.7",
]
description = 'minimize python source code'
keywords = []
license = "MIT"
name = "pysource-minimize"
readme = "README.md"
requires-python = ">=3.8"
version="0.6.3"


[project.scripts]
pysource-minimize = "pysource_minimize.__main__:main"


[project.urls]
Documentation = "https://github.com/15r10nk/pysource-minimize#readme"
Issues = "https://github.com/15r10nk/pysource-minimize/issues"
Source = "https://github.com/15r10nk/pysource-minimize"

[tool.black]
target-version = ["py38"]

[tool.commitizen]
changelog_incremental = true
major_version_zero = true
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version_files = [
  "src/pysource_minimize/__init__.py:version"
]
version_provider = "pep621"

[tool.coverage.paths]
pysource_minimize = ["src/pysource_minimize", "*/pysource-minimize/src/pysource_minimize"]
tests = ["tests", "*/pysource-minimize/tests"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "assert False", "raise NotImplemented", "\\.\\.\\."]

[tool.coverage.run]
branch = true
data_file = "$TOP/.coverage"
omit = [
  "src/pysource_minimize/__about__.py"
]
parallel = true


[tool.hatch.envs.hatch-test]
extra-dependencies = [
"pysource-codegen>=0.4.1",
  "inline-snapshot",
  "pytest-xdist[psutil] >=3.1.0",
]

[tool.hatch.envs.all]
dependencies = [
  "coverage[toml]>=6.5",
  "coverage-enable-subprocess",
  "pytest",
  "inline-snapshot"
]
env-vars.TOP = "{root}"
scripts.test-cov = "coverage run -m pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.cov]
dependencies = ["coverage[toml]>=6.5"]
detached = true
env-vars.TOP = "{root}"
scripts.test = [
  "- coverage erase",
  "hatch run all:test-cov -- {args}",
  "coverage combine",
  "coverage html",
  "coverage report "
]


[tool.hatch.envs.docs]
dependencies = [
  "mkdocs>=1.4.2",
  "mkdocs-material[imaging]>=8.5.10",
  "mkdocstrings>=0.19.0"
]
scripts.serve = ["mkdocs serve {args}"]

[tool.hatch.version]
path = "src/pysource_minimize/__init__.py"
