[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Frank Hoffmann", email = "15r10nk@polarbit.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
"rich >=12.6.0",
"astunparse >=1.6.3",
"click >=8.1.7",
]
description = 'minimize python source code'
keywords = []
license = "MIT"
name = "pysource-minimize"
readme = "README.md"
requires-python = ">=3.8"
version="0.7.0"


[project.scripts]
pysource-minimize = "pysource_minimize.__main__:main"


[project.urls]
Documentation = "https://github.com/15r10nk/pysource-minimize#readme"
Issues = "https://github.com/15r10nk/pysource-minimize/issues"
Source = "https://github.com/15r10nk/pysource-minimize"

[tool.black]
target-version = ["py38"]

[tool.commitizen]
changelog_incremental = true
major_version_zero = true
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version_files = [
  "src/pysource_minimize/__init__.py:version"
]
version_provider = "pep621"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
"pysource-codegen>=0.4.1",
  "inline-snapshot",
  "pytest-xdist[psutil] >=3.1.0",
]
[[tool.hatch.envs.hatch-test.matrix]]
python=['3.8',"3.9","3.10","3.11","3.12","3.13"]


[[tool.hatch.envs.mypy.matrix]]
python=['3.8',"3.10","3.11","3.12","3.13"]

[tool.hatch.envs.mypy]
extra-dependencies=["mypy"]
scripts.test = ["mypy src"]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs>=1.4.2",
  "mkdocs-material[imaging]>=8.5.10",
  "mkdocstrings>=0.19.0"
]
scripts.serve = ["mkdocs serve {args}"]

[tool.hatch.version]
path = "src/pysource_minimize/__init__.py"
